Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Enable accesskey for Accessibility
- Enable print action
- Contact action to send an email to the portal admin
Bug fixes:
~~~~~~~~~~
- history log for creation/commit/abandon version are not i18n
- #301: Root account badly created on adding a CPSDefault site.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Notifications send to eventservice when content is pasted.
- new nuxeo_print_css.css used in print mode