@@ -10,6 +10,8 @@ Bug fixes:
 ~~~~~~~~~~
 - history log for creation/commit/abandon version are not i18n
 - #301: Root account badly created on adding a CPSDefault site.
+- #313: CPS Site object is not a CPSDefault/Portal object but a
+  CMFDefault/Portal one.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Notifications send to eventservice when content is pasted.
